<resources>
    <string name="app_name">4InLine</string>
    <string name="button_play">Find Game</string>
    <string name="button_exit">Exit</string>
    <string name="title1">Music</string>
    <string name="description1">Enables background music</string>
    <string name="title2">Icon</string>
    <string name="description2">Changes the icon</string>
    <string name="dialog_title1">Select icon</string>
    <string name="title3">Color</string>
    <string name="description3">Color selector</string>
    <string name="dialog_title2">Select color</string>
    <string name="black_color">Black</string>
    <string name="white_color">White</string>
    <string name="red_color">Red</string>
    <string name="orange_color">Orange</string>
    <string name="green_color">Green</string>
    <string name="blue_color">Blue</string>
    <string name="yellow_color">Yellow</string>
    <string name="fuchsia_color">Fuchsia</string>
    <string name="pink_color">Pink</string>
    <string name="preferences_button">Preferences</string>
    <string name="carrot_icon">Carrot</string>
    <string name="circle_icon">Circle</string>
    <string name="crown_icon">Crown</string>
    <string name="dragon_icon">Dragon</string>
    <string name="face_icon">Face</string>
    <string name="frog_icon">Frog</string>
    <string name="ghost_icon">Ghost</string>
    <string name="hippo_icon">Hippo</string>
    <string name="jedi_icon">Jedi Order</string>
    <string name="user_null">Enter user</string>
    <string name="password_null">Enter password</string>
    <string name="encrypted_shared_preferences">com.tocadosmarin.fourinline.USER_LOGIN</string>
    <string name="user_password_error">User/Password Incorrect!</string>
    <string name="button_login">Log In</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_goback">Go Back</string>
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="different_password_error">Password not match</string>
    <string name="cb_session">Keep signed in</string>
    <string name="login_text">Log In</string>
    <string name="signup_text">You do not have an account? Sign up</string>
    <string name="radio_button_size_9">9</string>
    <string name="radio_button_size_7">7</string>
    <string name="radio_button_size_5">5</string>
    <string name="board_textview">Select the size of the board</string>
    <string name="dialog_title">Warning!</string>
    <string name="dialog_message">You must select an option!</string>
    <string name="dialog_button">Close</string>
    <string name="match_found">Match found!</string>
    <string name="btLogOut">Log out</string>
    <string name="dialog_login_message">The session has expired, please log in again.</string>
    <string name="dialog_login_cancel_bt">Not now</string>
    <string name="dialog_ok_button">Log in</string>
    <string name="dialog_logout_title">Are you sure you want to exit?</string>
    <string name="bt_confirm">Yes</string>
    <string name="signup_succcess">Signup success</string>
    <string name="signup_error">Error on sign up</string>
    <string name="request_error">Error making the request</string>
    <string name="tv_your_turn">Your turn</string>
    <string name="tv_opponent_turn">Opponent\'s turn</string>
    <string name="error_match_ended">Error! Partida finalizada</string>
</resources>