<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".game.BoardSelection">

    <TextView
        android:id="@+id/tvBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/board_textview" />

    <RadioGroup
        android:id="@+id/rgBoardSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/rbSize9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_size_9" />

        <RadioButton
            android:id="@+id/rbSize7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_size_7" />

        <RadioButton
            android:id="@+id/rbSize5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_size_5" />
    </RadioGroup>

    <Button
        android:id="@+id/btPlayGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Play!" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>