<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btFindGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/btFindGame"
        app:layout_constraintEnd_toEndOf="@+id/btFindGame"
        app:layout_constraintStart_toStartOf="@+id/btFindGame" />

    <Button
        android:id="@+id/btExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_exit"
        app:layout_constraintEnd_toEndOf="@+id/btPreferences"
        app:layout_constraintStart_toStartOf="@+id/btPreferences"
        app:layout_constraintTop_toBottomOf="@+id/btPreferences" />

    <LinearLayout
        android:layout_width="118dp"
        android:layout_height="335dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <Button
        android:id="@+id/btPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/preferences_button"
        app:layout_constraintEnd_toEndOf="@+id/btFindGame"
        app:layout_constraintStart_toStartOf="@+id/btFindGame"
        app:layout_constraintTop_toBottomOf="@+id/btFindGame" />

</androidx.constraintlayout.widget.ConstraintLayout>